# streaming-billing-intelligence-demo

./: .env.example  .gitignore  Makefile  README.md  datadog-agent.yaml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/core/: constants.py  errors.py  feature_flags.py  logging.py  metrics.py
backend/app/llm/: bedrock_client.py  prompts.py  structured.py
backend/app/ml/: __init__.py  drift_gate.py  quarantine_iforest.py
backend/app/pipelines/: customer_360_builder.py  rule_pipeline_builders.py  search_builder.py
backend/app/repositories/: base.py  bill_cycle_repo.py  case_history_repo.py  (+8 more)
backend/scripts/: _packages.py  _realism.py  backfill_bill_cycles.py  backfill_case_extref.py  enrich_customers_360.py  seed.py  seed_bill_cycles.py  seed_charge_codes.py  seed_customers.py  seed_customers_commercial.py  seed_feature_drift_metrics.py  seed_features.py  seed_history.py  seed_quarantine_cases.py  seed_rules.py  seed_system_metrics.py  seed_transactions.py  setup_indexes.py  setup_validators.py  split_customers.py  teardown.py  test_autoembed_shape.py
backend/tests/: _fakes.py  conftest.py  test_ai_assist_service.py  test_ai_assist_service_agentic.py  test_app_smoke.py  test_backfill_bill_cycles.py  test_backfill_transactions_extref.py  test_before_after_service.py  test_bucket_pattern.py  test_burst_plan.py  test_charge_code_change_watcher.py  test_customer_service.py  test_feature_drift.py  test_feature_drift_detector.py  test_feature_engineer.py  test_get_360_dispatch.py  test_metrics_burst_status.py  test_metrics_recorder.py  test_metrics_recorder_cadence.py  test_nbo_service.py  test_pipelines.py  test_rule_service.py  test_schemas_roundtrip.py  test_search_builder.py  test_seed_charge_codes.py  test_setup_indexes_features.py  test_setup_indexes_system_metrics.py  test_simulator_burst_spec_gates.py  test_split_customers.py  test_transaction_event_factory.py
(+268 files in other folders)
