[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acme-billing-backend"
version = "0.1.0"
description = "Streaming Billing — quarantine intelligence backend (FastAPI + PyMongo Async)"
requires-python = ">=3.11"
dependencies = [
    # FastAPI stack
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "httpx>=0.27",

    # MongoDB — PyMongo async (NOT Motor; see ADR-002)
    "pymongo>=4.9",
    "dnspython>=2.7",

    # Pydantic v2 + settings
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",

    # MSK / Kafka with IAM auth
    "aiokafka>=0.12",
    "aws-msk-iam-sasl-signer-python>=1.0",

    # AWS Bedrock
    "boto3>=1.35",

    # LangGraph — assist-agent orchestration
    "langgraph>=1.1,<2",

    # AutoEmbed (ADR-032): the Voyage SDK is no longer a runtime
    # dependency. Atlas embeds query + index text in-cluster via the
    # AutoEmbed index. The legacy `voyageai>=0.3` dep was removed in
    # PR-A — see docs/2026-05-08-legacy-byo-voyage-embedding-archive.md.

    # Logging
    "structlog>=24.4",

    # Seed / fixtures
    "faker>=30.0",

    # Misc
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]
# IsolationForest online API + worker scoring (Dockerfile installs this extra).
ml = [
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "mlflow>=2.16",
    "joblib>=1.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4"]
ignore = ["E501"]   # line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
